#79 - Minor code changes to make littlegrid work with Java 1.5